Ajustes apresentação. Estrutural seção dos Exp. Esboço de tabelas

--- a/Articles/VECM/Presentation.tex
+++ b/Articles/VECM/Presentation.tex
@@ -1,4 +1,4 @@
-% Created 2021-07-12 seg 11:47
+% Created 2021-07-14 qua 17:58
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{beamer}
   \usepackage{caption, csquotes, appendixnumberbeamer, graphicx}
@@ -56,11 +56,11 @@
 \end{frame}
 
 \section{Introduction}
-\label{sec:org1d8202a}
+\label{sec:org90edf24}
 
-\begin{frame}[label={sec:org96d5086}]{Introduction}
-After the subprime crisis (2008) and the Great Recession (2008-2009), policymakers have payed more attention on housing market.
-However, residential investment is only \alert{indirectly} considered.
+\begin{frame}[label={sec:org918350a}]{Introduction}
+After the Great Recession (2008-2009), policymakers have payed more attention on housing market.
+However, residential investment is only \alert{indirectly} considered (\emph{e.g.} housing starts, construction costs, etc).
 
 The growing theoretical and empirical literature based on the Sraffian supermultiplier model (SSM, \cites{serrano_long_1995}{bortis_institutions_1997}) establishes a prominent role for non-capacity creating autonomous expenditures such as \alert{residential investment}.
 Few works have examined its \alert{macroeconomic} determinants and still there is not a consensus about it.
@@ -73,9 +73,9 @@ Present and evaluate a parsimonious way of explaining the behavior of the reside
 \end{frame}
 
 \section{Empirical motivation}
-\label{sec:org8872f58}
+\label{sec:org2149dfe}
 
-\begin{frame}[label={sec:orgfe75453}]{Residential investment, business cycle and economic growth in the US economy}
+\begin{frame}[label={sec:org4f4082e}]{Residential investment, business cycle and economic growth in the US economy}
 \begin{itemize}
 \item Macroeconomic relevance of residential investment systematically neglected
 \begin{itemize}
@@ -95,7 +95,7 @@ From the review of empirical literature, residential investment:
 
 
 
-\begin{frame}[label={sec:orgd16731c}]{Residential investment and the business cycle \citep{green_follow_1997,leamer_housing_2007}}
+\begin{frame}[label={sec:org40f2fe4}]{Residential investment and the business cycle \citep{green_follow_1997,leamer_housing_2007}}
 \metroset{block=transparent}
 \begin{block}{Selected expenditures growth rates two years before and two years after recession starts\footnote{\tiny{Vertical lines indicate the begining of the recession (NBER recession dating procedure)}}}
 \begin{figure}[H]
@@ -109,7 +109,7 @@ From the review of empirical literature, residential investment:
 
 
 
-\begin{frame}[label={sec:org0d23be6}]{Residential investment and long-run economic growth\footnote{\tiny{HP filter, $\lambda = 1600$. We are aware of the econometric problems regarding this type of filter. For details see \textcite{NBER_HP}. This is just a visualization procedure.}} \citep{perez_Montiel_2021}}
+\begin{frame}[label={sec:org2b6186b}]{Residential investment and long-run economic growth\footnote{\tiny{HP filter, $\lambda = 1600$. We are aware of the econometric problems regarding this type of filter. For details see \textcite{NBER_HP}. This is just a visualization procedure.}} \citep{perez_Montiel_2021}}
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=.68\textheight, width = \textwidth]{./figs/Trend.png}
@@ -122,15 +122,15 @@ From the review of empirical literature, residential investment:
 
 
 \section{Econometric literature review}
-\label{sec:orgd2499b8}
+\label{sec:org2dfb033}
 
-\begin{frame}[label={sec:org865c519}]{Determinants of residential investment}
-Few econometric papers analyze housing in macroeconomic terms and its determinants.
+\begin{frame}[label={sec:orgab2c35c}]{Determinants of residential investment}
+Few econometric papers analyze residential investment (RI) in macroeconomic terms and its determinants.
 
 \begin{description}
 \item[{\textcite{poterba_tax_1984}}] houses as an asset and not only as a durable consumption good
-\item[{House price}] positively related
-\item[{Interest rate}] negatively related, interest rate choice varies
+\item[{House price}] positively related with RI
+\item[{Interest rate}] negatively related with RI, interest rate choice varies
 \item[{80s-90s Institutional changes}] residential investment responsiveness to interest rate is still valid
 \end{description}
 
@@ -143,9 +143,9 @@ House prices (nominal or deflated by some general price index) and some interest
 
 
 \section{Estimation proposition and economic discussion}
-\label{sec:org7a790da}
+\label{sec:orgd7c9e9e}
 
-\begin{frame}[label={sec:orgdbf343b}]{Houses own-rate of interest: definition}
+\begin{frame}[label={sec:org3cd8bd5}]{Houses own-rate of interest: definition}
 \textcite{teixeira_crescimento_2015}  proposed the index named houses own-rate of interest (\(own\)) to analyze the 2000s US housing boom episode.
 
 \begin{latex}
@@ -156,7 +156,7 @@ own =  \left(\frac{1+r_{mo}}{1+\pi} - 1\right)
 \end{latex}
 
 \begin{description}
-\item[{House price inflation (\(\pi\))}] relation between the costs of acquiring the new house market price and its potential sale price
+\item[{House price inflation (\(\pi\))}] relation between the costs of acquiring the new house (market price) and its future price
 \item[{Mortgage interest rate (\(r_{mo}\))}] financial cost of this operation
 \end{description}
 
@@ -166,19 +166,25 @@ It is the combination of the relevant nominal rate of interest with the relevant
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org0201f94}]{Houses own-rate of interest: clarifications}
+\begin{frame}[label={sec:org52661d3}]{Houses own-rate of interest: clarifications}
 \label{OwnClarification}
-Based on \citeauthor*{sraffaDrHayekMoney1932}'s (\citeyear{sraffaDrHayekMoney1932}) commodity rate, houses own-rate is:
 
 \begin{itemize}
-\item A \alert{real cost} measured in terms of houses (that's why \alert{houses} own-rate of interest)
-\item Not restricted to speculation episodes (such as housing bubble)
+\item It is a \alert{real cost} index
+\item its relevance is \alert{not} restricted to speculators
+\begin{itemize}
+\item net indebtedness and a positive effect on house owners’ creditworthiness
+\item second mortgages on the same property and mortgage equity withdrawal
 \end{itemize}
-
-Additionally, only \alert{persistent} changes in houses own-rate of interest will influence residential investment growth rate
-\begin{itemize}
 \item What is relevant is the \alert{future} price in relation to the buying price
-\item Construction takes time (from 7 to 12 months depending on housing unit type) \hyperlink{constructionPlot}{\beamerbutton{Figure}}
+\begin{itemize}
+\item Only persistent changes in houses own-rate of interest will influence residential investment growth rate
+\item Construction takes time (from 7 to 12 months depending on housing unity type) \hyperlink{constructionPlot}{\beamerbutton{Figure}}
+\end{itemize}
+\item Long-run determinants
+\begin{itemize}
+\item demographic factors, urbanization, housing policy, etc
+\end{itemize}
 \end{itemize}
 
 \begin{block}{Technical note}
@@ -187,7 +193,7 @@ So, we use the lags of this variable as a proxy for the expected one.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org3e444bd}]{Houses own-rate of interest and residential investment growth rate}
+\begin{frame}[label={sec:org3b9a562}]{Houses own-rate of interest and residential investment growth rate}
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=\textwidth]{./figs/TxPropria_Investo.png}
@@ -197,7 +203,7 @@ So, we use the lags of this variable as a proxy for the expected one.
 
 
 
-\begin{frame}[label={sec:orgfbc40fe}]{Data and inspection}
+\begin{frame}[label={sec:orgcea4c2b}]{Data and inspection}
 \label{DataInspection}
 We rely on the following quarterly seasonally adjusted data:
 \begin{description}
@@ -215,7 +221,7 @@ The time range was selected because it captures the effects of changes in deposi
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge30213b}]{Estimation strategy}
+\begin{frame}[label={sec:org9934ef5}]{Estimation strategy}
 Previous results allows us to estimate a error correction model.
 We assume the following long-run relationship:
 
@@ -246,16 +252,16 @@ We estimated a VECM with four lags.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgd723291}]{Expected results and economic meaning}
+\begin{frame}[label={sec:orge0d8930}]{Expected results and economic meaning}
 
 \input{./tabs/hypothesis.tex}
 \end{frame}
 
 
 \section{Results}
-\label{sec:org3774fd4}
+\label{sec:org910100a}
 
-\begin{frame}[label={sec:org63487ba}]{Estimation parameters \hyperlink{robust_frame}{\beamerbutton{Robustness check}}}
+\begin{frame}[label={sec:org16c8881}]{Estimation parameters \hyperlink{robust_frame}{\beamerbutton{Robustness check}}}
 \label{back}
 \begin{table}[H]
 	\centering
@@ -268,13 +274,13 @@ We estimated a VECM with four lags.
 \end{frame}
 
 
-\begin{frame}[label={sec:org6ed18ea}]{Orthogonalized Impulse Response Function}
+\begin{frame}[label={sec:org0a39957}]{Orthogonalized Impulse Response Function}
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=.85\textheight]{./figs/Impulse_VECMOrth_grey.png}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org1275123}]{Forecast error variance decomposition}
+\begin{frame}[label={sec:org3d65684}]{Forecast error variance decomposition}
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{./figs/FEVD_VECMpython_TxPropria.png}
@@ -282,8 +288,8 @@ We estimated a VECM with four lags.
 \end{frame}
 
 \section{Conclusions}
-\label{sec:org5663cf1}
-\begin{frame}[label={sec:org5b5b03d}]{Concluding remarks}
+\label{sec:org5b9eac9}
+\begin{frame}[label={sec:orge75e8cb}]{Concluding remarks}
 We presented a simple specification for residential investment growth rate based on houses own-rate of interest proposed by \textcite{teixeira_crescimento_2015}.
 \begin{itemize}
 \item houses own-rate of interest (\(own\)) and residential investment growth rate (\(g_{I_h}\)) share a common long-run trend;
