--- a/Articles/VECM/Presentation.org
+++ b/Articles/VECM/Presentation.org
@@ -66,8 +66,8 @@
 
 ** Introduction
 
-After the subprime crisis (2008) and the Great Recession (2008-2009), policymakers have payed more attention on housing market.
-However, residential investment is only *indirectly* considered.
+After the Great Recession (2008-2009), policymakers have payed more attention on housing market.
+However, residential investment is only *indirectly* considered (/e.g./ housing starts, construction costs, etc).
 
 The growing theoretical and empirical literature based on the Sraffian supermultiplier model (SSM, cites:serrano_long_1995,bortis_institutions_1997) establishes a prominent role for non-capacity creating autonomous expenditures such as *residential investment*.
 Few works have examined its *macroeconomic* determinants and still there is not a consensus about it.
@@ -128,11 +128,11 @@ From the review of empirical literature, residential investment:
 
 ** Determinants of residential investment
 
-Few econometric papers analyze housing in macroeconomic terms and its determinants.
+Few econometric papers analyze residential investment (RI) in macroeconomic terms and its determinants.
 
 - textcite:poterba_tax_1984 :: houses as an asset and not only as a durable consumption good
-- House price :: positively related
-- Interest rate :: negatively related, interest rate choice varies
+- House price :: positively related with RI
+- Interest rate :: negatively related with RI, interest rate choice varies
 - 80s-90s Institutional changes :: residential investment responsiveness to interest rate is still valid
 
 #+begin_export latex
@@ -158,7 +158,7 @@ own =  \left(\frac{1+r_{mo}}{1+\pi} - 1\right)
 \end{equation}
 #+END_latex
 
-- House price inflation ($\pi$) :: relation between the costs of acquiring the new house market price and its potential sale price
+- House price inflation ($\pi$) :: relation between the costs of acquiring the new house (market price) and its future price
 - Mortgage interest rate ($r_{mo}$) :: financial cost of this operation
 
 #+LATEX: \metroset{block=fill}
@@ -168,14 +168,16 @@ It is the combination of the relevant nominal rate of interest with the relevant
 
 ** Houses own-rate of interest: clarifications
 #+LATEX: \label{OwnClarification}
-Based on \citeauthor*{sraffaDrHayekMoney1932}'s (citeyear:sraffaDrHayekMoney1932) commodity rate, houses own-rate is:
 
-- A *real cost* measured in terms of houses (that's why *houses* own-rate of interest)
-- Not restricted to speculation episodes (such as housing bubble)
-
-Additionally, only *persistent* changes in houses own-rate of interest will influence residential investment growth rate
+- It is a *real cost* index
+- its relevance is *not* restricted to speculators
+  + net indebtedness and a positive effect on house owners’ creditworthiness
+  + second mortgages on the same property and mortgage equity withdrawal
 - What is relevant is the *future* price in relation to the buying price
-- Construction takes time (from 7 to 12 months depending on housing unit type) @@latex:\hyperlink{constructionPlot}{\beamerbutton{Figure}}@@
+  + Only persistent changes in houses own-rate of interest will influence residential investment growth rate
+  + Construction takes time (from 7 to 12 months depending on housing unity type) @@latex:\hyperlink{constructionPlot}{\beamerbutton{Figure}}@@
+- Long-run determinants
+  + demographic factors, urbanization, housing policy, etc
 
 *** Technical note
 Data series of expected house inflation do not exist.
